# check-maker

./: .dockerignore  .env.dev  .gitignore  Makefile  README.md  compose.dev.yml  compose.prod.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
check_maker/: __init__.py  asgi.py  celery.py  settings.py  tests.py  urls.py  views.py  wsgi.py
check_maker/api/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  views.py
check_maker/api/fixtures/: checks.json  data.json  merchant-points.json  printers.json
check_maker/api/migrations/: 0001_initial.py
check_maker/templates/: check.html
